Update doc swagger
